--- a/projetos/Contador/bower.json
+++ b/projetos/Contador/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "01-hello-world",
+  "name": "Contador ++",
   "homepage": "https://github.com/PedroSod/dadm",
   "description": "",
   "main": "",
